--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         }
 
         .slide:nth-child(2) {
-            background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(2.jpg);
+            background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(senam-sd.jpg);
         }
 
         .slide:nth-child(3) {
@@ -1152,15 +1152,15 @@
             </div>
             <div class="slide">
                 <div class="slide-content">
-                    <h1>Wisata Alam yang Menawan</h1>
-                    <p>Rasakan pengalaman tak terlupakan di tengah alam Papua</p>
-                    <a href="#gallery" class="cta-button">Lihat Galeri</a>
+                    <h1>Team KKN Samberpasi</h1>
+                    <p>Kuliah Kerja Nyata Universitas Cenderawasih di Samberpasi</p>
+                    <a href="#events" class="cta-button">Lihat Galeri</a>
                 </div>
             </div>
             <div class="slide">
                 <div class="slide-content">
-                    <h1>Budaya dan Tradisi Asli</h1>
-                    <p>Pelajari kearifan lokal dan tradisi masyarakat Papua</p>
+                    <h1>Wisata Alam</h1>
+                    <p>Lihat pesona alam yang ada di Kampung Samberpasi</p>
                     <a href="#events" class="cta-button">Lihat Pariwisata</a>
                 </div>
             </div>
@@ -1584,4 +1584,5 @@
         });
     </script>
 </body>
+
 </html>
